test/expected/cast_typedef_i.out
cast x into typedef int
            ^
13: syntax error: "typedef": "as", "into", or "to" expected ("typedef" is a keyword)
